Fix collision issue after respawn